--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
     "format": "prettier --write '{src,stories,__tests__}/**/*.js'",
     "prepublishOnly": "npm run build",
     "storybook": "start-storybook -p 6006",
-    "test": "run-s test:unit test:format",
+    "test": "run-s test:specs test:format",
     "test:format": "prettier-check '{src,stories,__tests__}/**/*.js'",
-    "test:unit": "jest",
-    "test:updateSnapshots": "jest -u"
+    "test:specs": "karma start"
   },
   "files": [
     "dist/**/*"
@@ -32,33 +31,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|ico|jpeg|png|gif)$": "<rootDir>__tests__/mocks/file.mock.js",
-      "\\.(scss|sass|css|less)$": "<rootDir>__tests__/mocks/file.mock.js"
-    },
-    "moduleDirectories": [
-      "src",
-      "node_modules"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/__tests__/index.js"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
-    "testRegex": "/__tests__/.*\\.spec\\.js$",
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.[t|j]sx?$": "babel-jest"
-    },
-    "transformIgnorePatterns": [
-      "/!node_modules\\/react-dnd/"
-    ]
   },
   "resolutions": {
     "@storybook/{app}/webpack": "^5"
@@ -82,36 +54,38 @@
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
     "@types/react-splitter-layout": "^3.0.2",
-    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.7",
     "arraybuffer-loader": "^1.0.8",
-    "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-jsx-control-statements": "^4.1.2",
     "babel-plugin-ramda": "^2.0.0",
-    "babel-polyfill": "^6.26.0",
     "buttercup": "^6.13.1",
+    "chai": "^4.3.6",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.6.1",
+    "elt-react-credit-cards": "^0.0.1",
     "extract-domain": "^2.2.1",
     "fast-deep-equal": "^2.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^4.2.5",
     "i18next": "^19.9.1",
-    "jest": "^27.5.1",
-    "jest-styled-components": "^7.0.8",
     "jsx-control-statements": "^3.2.8",
+    "karma": "^6.4.0",
+    "karma-chai": "^0.1.0",
+    "karma-firefox-launcher": "^2.1.2",
+    "karma-mocha": "^2.0.1",
+    "karma-sinon": "^1.0.5",
+    "karma-spec-reporter": "^0.0.34",
+    "karma-webpack": "^5.0.0",
     "lint-staged": "^10.1.3",
     "mini-css-extract-plugin": "^2.6.0",
+    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "path-posix": "^1.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
     "random-words": "^1.2.0",
     "react": "^17.0.2",
-    "react-credit-cards": "^0.8.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
@@ -121,6 +95,8 @@
     "rimraf": "^3.0.2",
     "sass": "^1.52.3",
     "sass-loader": "^12.6.0",
+    "sinon": "^14.0.0",
+    "sleep-promise": "^9.1.0",
     "style-loader": "^3.3.1",
     "styled-components": "^5.3.5",
     "terser-webpack-plugin": "^5.3.1",
