--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "jsx-control-statements": "^3.2.8",
     "karma": "^6.4.0",
     "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-firefox-launcher": "^2.1.2",
     "karma-mocha": "^2.0.1",
     "karma-sinon": "^1.0.5",
